@@ -1,5 +1,17 @@
 2003-10-28  Carl Worth  <cworth@isi.edu>
 
+	* src/cairo_xlib_surface.c (_cairo_xlib_surface_pixels_per_inch):
+	Implement new backend function.
+
+	* src/cairo_surface.c (_cairo_surface_pixels_per_inch): Add new
+	function to query surface pixels_per_inch.
+
+	* src/cairo_gstate.c (_cairo_gstate_init): Rename gstate->ppm to
+	gstate->pixels_per_inch. Swithc from default 3780 pixels per meter
+	to 96.0 pixels per inch which is slightly different.
+
+2003-10-28  Carl Worth  <cworth@isi.edu>
+
 	* src/cairo_gstate.c (_cairo_gstate_ensure_source):
 	(_cairo_gstate_clip_and_composite_trapezoids):
 	(_cairo_gstate_clip):
